# FastAPI-React

backend/: .gitignore  main.py  pyproject.toml  test.py
backend/core/: config.py  dependencies copy.py  dependencies.py  middleware.py
backend/db/: database.py  redis.py
backend/migrations/: env.py
backend/migrations/versions/: 8b9d13f0d804_init.py  9fafc1af6479_add_relationship.py  a7249b9f4d01_add_institution.py  a931f7ed68b8_correction_superadmin.py  c691dc343851_add_institution_and_schemas.py
backend/models/: __init__.py  channel.py  institution.py  message.py  user.py
backend/routers/: auth.py  config.py  evo.py  institution.py  login.py  register.py  users.py
backend/schemas/: channels_schemas.py  institution_schemas.py  roles.py  roles_schemas.py  user_schemas.py
backend/services/: channel_service.py  evolution.py  evolution_service.py  institution_service.py  user_service.py
backend/src/core/: config.py  dependencies.py  erros.py  mail.py  middleware.py
backend/src/db/: database.py  redis.py
backend/src/models/: __init__.py  channel.py  institution.py  message.py  user.py
backend/src/routers/: auth.py  config.py  evo.py  institution.py  login.py  register.py  users.py
backend/src/schemas/: channels_schemas.py  emails_schemas.py  evolution_schemas.py  institution_schemas.py  roles_schemas.py  user_schemas.py
backend/src/services/: cache_service.py  channel_service.py  evolution_service.py  institution_service.py  user_service.py
backend/utils/: email_verify.py  file_utils.py  prevent_deletion.py  token_auth.py
frontend/: package.json  (+1 more)
(+14 files in other folders)
