[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.0",
    "apscheduler>=3.11.1",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "fastapi>=0.119.1",
    "fastapi-cache2>=0.2.2",
    "fastapi-mail>=1.5.8",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "password-validator>=1.0",
    "psycopg2>=2.9.11",
    "psycopg[binary,pool]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis[async]>=7.0.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]
